main.css
/*
newspaper article vibes
FULL CREDIT TO NAFISA™
OR
Color Scheme:
#E0E6FF
#676f9d
#424769
#2d3250
#f9b17a
*/

/*google fonts*/

.raleway {
  font-family: "Raleway", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}
.bebas-neue-regular {
  font-family: "Bebas Neue", sans-serif;
  font-weight: 400;
  font-style: normal;
}

/*end of google fonts*/



body{
        height: 99%;
        width: 99%;
        background-color: #2d3250;
        opacity: 1;
        background-image:  linear-gradient(#424769 1.1px, transparent 1.1px), linear-gradient(to right, #424769 1.1px, #2d3250 1.1px);
        background-size: 22px 22px;
}
*{
        box-sizing: border-box;
        color: #E0E6FF;
        font-family: "Raleway", sans-serif;
        font-optical-sizing: auto;
        font-weight: 400;
        font-style: normal;
}
.banner{
        border: 0px solid #8093F1;
        border-radius: 12px;
        position: relative;
        margin-top: 0px;
        /*
        background-image: url("images/triang.png");
        background-repeat: no-repeat;
        background-size: 100% 650px;
        */
        height: 500px;
        width: 100%;
        text-align: left;
        font-size: 24px;
}

.banner p{
        line-height: 2px;
        font-size: 35px;
        font-weight: 400;
}
.menu{
        position: absolute;
        top: 50px;
        left: 70px;
        font-size: 2em;
        text-shadow: 2px 2px #317873;
        font-style: oblique;
        width: 100px;
        overflow: hidden
}
ul {
  color: #2d3250;
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  position: sticky;
  top: 0;
}
.main_nav li {
        background-color: #F7A15C;
        display: inline;
        float: left;
        font-size: 1.5em;
        border: 0px solid;
        border-radius: 12px;
        margin: 5px 16px;
        font-size: 35px;
        box-shadow: 0 0 15px 5px rgba(249, 177, 122, 0.75);
  }
  a {
        text-decoration: none;
        color: #2d3250;
  }
  a:visited{
        color: #2d3250;
  }
  li a:hover{
        border: 0px solid;
        border-radius: 12px;

  }
  div{
        padding: 5px 16px;

        border: 0px solid;
        border-radius: 12px;
        text-align: center; 
  }
  li a {
        transition: background-color 1s;
        display: block;
        border: 0px solid;
        border-radius: 12px;
        color: #2d3250;
        text-align: center;
        padding: 14px 16px;
        text-decoration: none;
        font-weight: 400;
  }
#logo{
        width: 200px;
        height: 200px;
        position: absolute;
        top: 50px;
        right: 260px;
}
.container{
        color: white;
  position: relative;
  border: 0px solid;
  border-radius: 12px;
  margin-top: 10px;
  padding: 20px 24px;
  background-color: #424769;
}
.container h2{
  font-size: 3em;
}
.container h3{
  font-size: 2em;
}


.left{
        width: 48%;
        position:absolute;
        left: 5px;
        background-color: salmon;
        color: ghostwhite;
        border:2px ghostwhite;
        border-radius:5%;
        font-size:2em;
        text-align:center;
}
.right{
        width:48%;
        position: absolute;
        right:5px;
        background-color: salmon;
        color: ghostwhite;
        border:2px ghostwhite;
        border-radius:5%;
        font-size:2em;
        text-align:center;

}
.active{
        background-color: #f9b17a;
        border: 0px solid #553772;
        border-radius: 12px;
  }
.nav {
        position: sticky;
        top: 0;
        background-color: #424769;
        border: 0px solid #553772;
        border-radius: 12px;
}
.nav ul {
        color: #E0E6FF;
        text-align: right;
}

